devel
  - cmake: make "PHIST_TRY_TO_PIN_THREADS=OFF" the default because nowadays, it's more useful to rely on MPI and/or OPenmP pinning unless you know exactly what you're doing
  - new linear solver: IDR(s)
  - fix bug in generating Fortran bindings (missing include path for Epetra/Tpetra kernel libs)
  - refactoring of cmake (some parts outsourced) to make it more readable)
  - refactor integration tests (now defined via cmake rather than a python script)
  
phist-1.11.2
  - use lapacke interface almost everywhere to improve portability (in particular for Cray libsci, which doesn't provide a lapack.h header)
  - fix another minor issue with Cray libsci
  - adjust deprecated Python code to support python 3.11
phist-1.11.0
  - clean up BLAS/LAPACK interface to allow building with OpenBLAS
  - fix a minor build error with Intel OneAPI Fortran compiler ifx
  - get rid of more deprecated tpetra code in case tpetra supports complex types
phist-1.10.0
  - get rid of some deprecated code in the phist/tpetra interface -- we will now require trilinos version >= 13
  - fix a cmake issue, data types supported by Trilinos and PETSc kernel libs should now be detected correctly
  - allow obtaining device pointer via mvec_extract_view
phist-1.9.5
  - update contact information Jonas Thies
  - builtin kernels now use mpi_f08 module (adds type safety and prevents errors with
  stricter fortran compilers)
  - minor bug fixes for Power9 systems
phist-1.9.4
  - better way of setting compiler flag -march=native or similar
    using cmake feature tests
  - const version of kernel functions mvec/sdMat_extract_view
  - when interfacing to Trilinos Belos and Anasazi, use their
    OrthoManager by default because the interface to our own seems to
    be buggy/broken and needs attention
phist-1.9.3
  - resolve pthreads dependency via gtest (assume pthreads available if OpenMP is) 
  - fix compiling with ghost but without MPI  

phist-1.9.2